--- a/src/_includes/components/cta-262.html
+++ b/src/_includes/components/cta-262.html
@@ -5,18 +5,17 @@
 <section id="cta-262">
     <div class="cs-container">
         <div class="cs-left-section">
-            <h2 class="cs-title">Schedule Your Next Checkup With Us</h2>
-            <a href="" class="cs-button-solid">Request Appointment</a>
+            <h2 class="cs-title">Take the first step to relaxation and wellness. </h2>
+            <a href="{{client.onlineBooking}}" target="_blank" rel="noopener" class="cs-button-solid">Book Today!</a>
         </div>
         <div class="cs-content">
-            <span class="cs-header">Available Hours</span>
+            <span class="cs-header">Opening Hours</span>
             <p class="cs-p"> 
-                Tuesday, Thursday, Friday: 9am-6pm<br>
-                ​(closed for lunch 12pm-2pm)
+                Monday to Sunday<br>
+                9AM - 7PM
             </p>
             <p class="cs-p">
                 Appointments Preferred, Walk-Ins Welcome.<br>
-                Saturdays by Appointment Only.
             </p>
         </div>
         <picture class="cs-background">
