--- a/src/_includes/components/footer-710.html
+++ b/src/_includes/components/footer-710.html
@@ -14,36 +14,22 @@
             </div>
             <ul class="cs-ul">
                 <li class="cs-li">
-                    <span class="cs-header">Services</span>
+                    <span class="cs-header">Massages</span>
                 </li>
                 <li class="cs-li">
-                    <a href="/services/semaglutide" class="cs-link">Semaglutide</a>
+                    <a href="/massages/" class="cs-link">Back-Shoulder & Neck Massage</a>
                 </li>
                 <li class="cs-li">
-                    <a href="/services/dermal-filler" class="cs-link">Dermal Filler</a>
+                    <a href="/massages/" class="cs-link">Foot-Leg Massage</a>
                 </li>
                 <li class="cs-li">
-                    <a href="/services/tirezapetide" class="cs-link">Tirezapetide</a>
+                    <a href="/oil-massage/" class="cs-link">Relaxing Thai Hot Oil Massage</a>
                 </li>
                 <li class="cs-li">
-                    <a href="/services/neurotoxins" class="cs-link">Neurotoxins</a>
-                </li>
-            </ul>
-            <ul class="cs-ul">
-                <li class="cs-li">
-                    <span class="cs-header">Services</span>
+                    <a href="/deep-tissue/" class="cs-link">Thai Hot Oil Deep Tissue Massage</a>
                 </li>
                 <li class="cs-li">
-                    <a href="/services/semaglutide" class="cs-link">Semaglutide</a>
-                </li>
-                <li class="cs-li">
-                    <a href="/services/dermal-filler" class="cs-link">Dermal Filler</a>
-                </li>
-                <li class="cs-li">
-                    <a href="/services/tirezapetide" class="cs-link">Tirezapetide</a>
-                </li>
-                <li class="cs-li">
-                    <a href="/services/neurotoxins" class="cs-link">Neurotoxins</a>
+                    <a href="/massages/" class="cs-link">Lymphatic Drainage Massage</a>
                 </li>
             </ul>
             <ul class="cs-ul cs-contact-ul">
@@ -86,33 +72,7 @@
                     <a href="/massages/" class="cs-nav-link">Massages</a>
                 </li>
                 <li class="cs-nav-li">
-                    <a href="/gallery/" class="cs-nav-link">Gallery</a>
-                </li>
-                <li class="cs-nav-li">
-                    <a href="/reviews/" class="cs-nav-link">Reviews</a>
-                </li>
-            </ul>
-            <!--Social-->
-            <ul class="cs-social">
-                <li class="cs-social-li">
-                    <a href="{{client.socials.facebook}}" class="cs-social-link" aria-label="Visit Facebook" target="_blank" rel="noopener">
-                        <img class="cs-social-icon cs-default" src="/assets/svgs/facebook.svg" alt="icon" loading="lazy" decoding="async" width="24" height="24" aria-hidden="true">
-                    </a>
-                </li>
-                <li class="cs-social-li">
-                    <a href="{{client.socials.twitter}}" class="cs-social-link" aria-label="Visit Twitter" target="_blank" rel="noopener">
-                        <img class="cs-social-icon cs-default" src="/assets/svgs/twitter.svg" alt="icon" loading="lazy" decoding="async" width="24" height="24" aria-hidden="true">
-                    </a>
-                </li>
-                <li class="cs-social-li">
-                    <a href="{{client.socials.instagram}}" class="cs-social-link" aria-label="Visit Instagram" target="_blank" rel="noopener">
-                        <img class="cs-social-icon cs-default" src="/assets/svgs/instagram.svg" alt="icon" loading="lazy" decoding="async" width="24" height="24" aria-hidden="true">
-                    </a>
-                </li>
-                <li class="cs-social-li">
-                    <a href="{{client.socials.youtube}}" class="cs-social-link" aria-label="Visit YouTube" target="_blank" rel="noopener">
-                        <img class="cs-social-icon cs-default" src="/assets/svgs/youtube.svg" alt="icon" loading="lazy" decoding="async" width="24" height="24" aria-hidden="true">
-                    </a>
+                    <a href="/contact/" class="cs-nav-link">Contact Us</a>
                 </li>
             </ul>
         </div>
