--- a/src/_includes/components/hero-1469.html
+++ b/src/_includes/components/hero-1469.html
@@ -1,9 +1,9 @@
 <section id="hero-1469">
     <div class="cs-container">
         <div class="cs-content">
-            <h1 class="cs-title">Massage in Skipton</h1>
+            <h1 class="cs-title">Experience Expert Massage Therapy in Skipton</h1>
             <p class="cs-text">
-                Aqestic recusandae laudantium optio amet a quisquam saepe aliquid, voluptate praesentium dicta fuga dolor error perspiciatis voluptatem eum cupiditate totam reiciendis quam minus  
+                Discover deep relaxation and rejuvenation at Skipton Thai Massage. Our skilled therapist blends time-honoured Thai massage techniques with western therapies in Skipton, helping those seeking relief from muscle tension, everyday stress, or simply looking to enhance their wellbeing.
             </p>
             <a href="{{client.onlineBooking}}" target="_blank" rel="noopener" class="cs-button-solid">Schedule A Massage</a>
         </div>
