--- a/src/_includes/components/pricing-tiles.html
+++ b/src/_includes/components/pricing-tiles.html
@@ -6,10 +6,10 @@
 <section id="services-877">
     <div class="cs-container">
         <div class="cs-content">
-            <span class="cs-topper">Services</span>
-            <h2 class="cs-title">Massages that we offer</h2>
+            <span class="cs-topper">Massage Treatments</span>
+            <h2 class="cs-title">Our Massage Treatments</h2>
             <p class="cs-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque, minus temporibus debitis quo nulla molestias quibusdam quisquam dicta eligendi nam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, eum.
+                Step into a world of traditional Thai healing at Skipton Thai Massage. From deeply therapeutic treatments to gentle relaxation therapies, each session is thoughtfully personalised to achieve your wellness goals. Our range of authentic Thai massage techniques helps address muscle tension, reduce stress and restore natural balance.
             </p>
         </div>
         <ul class="cs-card-group">
