--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -7,7 +7,7 @@
 @media only screen and (min-width: 0rem) {
     #sbs-867 {
         padding: var(--sectionPadding);
-        background-color: #f7f7f7;
+        background-color: #F7FDF5;
 
         .cs-container {
             width: 100%;
@@ -130,7 +130,7 @@
 @media only screen and (min-width: 0rem) {
     #sbs-r-870 {
         padding: var(--sectionPadding);
-        background-color: #f7f7f7;
+        background-color: #F7FDF5;
 
         .cs-container {
             width: 100%;
@@ -312,7 +312,7 @@
         .cs-faq-item {
             list-style: none;
             width: 100%;
-            background-color: #f7f7f7;
+            background-color: #F7FDF5;
             /* clips all corners of the button that overlap the rounded border */
             overflow: hidden;
             transition: border-bottom 0.3s;
@@ -345,11 +345,12 @@
             /* 16px - 20px */
             font-size: clamp(1rem, 2.5vw, 1.25rem);
             line-height: 1.2em;
+            font-family: "Syne", Arial, sans-serif;
             text-align: left;
             font-weight: bold;
             /* 20px - 24px */
             padding: clamp(1.25rem, 2vw, 1.5rem);
-            background-color: #f7f7f7;
+            background-color: #F7FDF5;
             border: none;
             color: var(--headerColor);
             display: block;
