--- a/src/assets/less/components.less
+++ b/src/assets/less/components.less
@@ -519,7 +519,7 @@
     body.dark-mode {
         #services-877 {
             .cs-topper {
-                color: var(--primaryLight);
+                color: var(--primary);
             }
 
             .cs-title,
