--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -97,8 +97,9 @@
 @media only screen and (min-width: 0rem) {
     body.dark-mode {
         #sbs-867 {
+            background-color: var(--dark);
             .cs-topper {
-                color: var(--primaryLight);
+                color: var(--primary);
             }
 
             .cs-title,
@@ -222,8 +223,9 @@
 @media only screen and (min-width: 0rem) {
     body.dark-mode {
         #sbs-r-870 {
+            background-color: var(--dark);
             .cs-topper {
-                color: var(--primaryLight);
+                color: var(--primary);
             }
 
             .cs-title,
