--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -7,7 +7,7 @@
 @media only screen and (min-width: 0rem) {
     #sbs-867 {
         padding: var(--sectionPadding);
-        background-color: #F7FDF5;
+        background-color: #eef7f1;
 
         .cs-container {
             width: 100%;
@@ -131,7 +131,7 @@
 @media only screen and (min-width: 0rem) {
     #sbs-r-870 {
         padding: var(--sectionPadding);
-        background-color: #F7FDF5;
+        background-color: #eef7f1;
 
         .cs-container {
             width: 100%;
@@ -314,7 +314,7 @@
         .cs-faq-item {
             list-style: none;
             width: 100%;
-            background-color: #F7FDF5;
+            background-color: #eef7f1;
             /* clips all corners of the button that overlap the rounded border */
             overflow: hidden;
             transition: border-bottom 0.3s;
@@ -352,7 +352,7 @@
             font-weight: bold;
             /* 20px - 24px */
             padding: clamp(1.25rem, 2vw, 1.5rem);
-            background-color: #F7FDF5;
+            background-color: #eef7f1;
             border: none;
             color: var(--headerColor);
             display: block;
