--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -5,7 +5,7 @@
 @media only screen and (min-width: 0rem) {
   #sbs-867 {
     padding: var(--sectionPadding);
-    background-color: #F7FDF5;
+    background-color: #eef7f1;
   }
   #sbs-867 .cs-container {
     width: 100%;
@@ -106,7 +106,7 @@
 @media only screen and (min-width: 0rem) {
   #sbs-r-870 {
     padding: var(--sectionPadding);
-    background-color: #F7FDF5;
+    background-color: #eef7f1;
   }
   #sbs-r-870 .cs-container {
     width: 100%;
@@ -262,7 +262,7 @@
   #faq-1108 .cs-faq-item {
     list-style: none;
     width: 100%;
-    background-color: #F7FDF5;
+    background-color: #eef7f1;
     /* clips all corners of the button that overlap the rounded border */
     overflow: hidden;
     transition: border-bottom 0.3s;
@@ -295,7 +295,7 @@
     font-weight: bold;
     /* 20px - 24px */
     padding: clamp(1.25rem, 2vw, 1.5rem);
-    background-color: #F7FDF5;
+    background-color: #eef7f1;
     border: none;
     color: var(--headerColor);
     display: block;
