--- a/src/assets/less/contact.less
+++ b/src/assets/less/contact.less
@@ -137,7 +137,7 @@
             padding: clamp(1.5rem, 5.18vw, 3rem) clamp(1rem, 4vw, 3rem);
             /* prevents flexbox from affecting height and width */
             box-sizing: border-box;
-            background-color: #F7FDF5;
+            background-color: #eef7f1;
             border-radius: (16/16rem);
             display: flex;
             justify-content: space-between;
