--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1,5 +1,3 @@
-/* CODESTITCH STYLES, RESET, HEADER/NAVIGATION AND FOOTER */
-
 /*-- -------------------------- -->
 <---        Core Styles         -->
 <--- -------------------------- -*/
@@ -8,9 +6,9 @@
 @media only screen and (min-width: 0rem) {
     // Website colors
     :root {
-        --primary: #65AA2E;
-        --primaryLight: #ffd675;
-        --secondary: #65AA2E;
+        --primary: #51B076;
+        --primaryLight: #73C091;
+        --secondary: #51B076;
         --secondaryLight: #001f3f;
         --headerColor: #1a1a1a;
         --bodyTextColor: #4e4b66;
@@ -83,7 +81,7 @@
             display: block;
             height: 100%;
             width: 0%;
-            background: #1a1a1a;
+            background: var(--primaryLight);
             opacity: 1;
             top: 0;
             left: 0;
@@ -92,7 +90,7 @@
         }
 
         &:hover {
-            color: var(--primary);
+            color: #fff;
             &:before {
                 width: 100%;
             }
@@ -601,6 +599,7 @@
 
         .cs-li-link {
             font-size: (20/16rem);
+            font-family: syne;
             line-height: 1.2em;
             font-weight: 700;
             text-decoration: none;
@@ -1071,6 +1070,7 @@
             font-size: (16/16rem);
             line-height: 1.5em;
             font-weight: 700;
+            font-family: syne;
             text-decoration: none;
             margin: 0;
             color: var(--headerColor);
@@ -1270,7 +1270,7 @@
                 content: '';
                 width: 100%;
                 height: 100%;
-                background: #F3FDF2;
+                background: #eef7f1;
                 opacity: .8;
                 position: absolute;
                 display: block;
@@ -1311,9 +1311,9 @@
             &:before {
                 width: 100%;
                 height: 100%;
-                background: linear-gradient(90deg, rgba(247, 255, 246, 0.9) 23.05%, rgba(255, 243, 236, 0.00) 80.08%);
+                background: linear-gradient(90deg, rgba(238, 247, 241, 0.9) 23.05%, rgba(255, 243, 236, 0.00) 80.08%);
                 opacity: 1;
-            }
+            }  
         }
     }
 }
@@ -1568,6 +1568,7 @@
             margin: 0 0 (24/16rem) 0;
             color: #fff;
             display: block;
+            font-family: syne;
         }
 
         .cs-link {
