--- a/src/_includes/components/hero-1469.html
+++ b/src/_includes/components/hero-1469.html
@@ -11,18 +11,18 @@
     <!-- Background Image, background image added in the css at 1600px for parallax effect -->
     <picture class="cs-background">
         <!--Mobile Image -->
-        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/hero.jpg" | resize({width: 750, height: 1400}) | avif %}" type="image/avif">
-        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/hero.jpg" | resize({width: 750, height: 1400}) | webp %}" type="image/webp">
-        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/hero.jpg" | resize({width: 750, height: 1400}) | jpeg %}" type="image/jpeg">
+        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 750, height: 1400, position: "attention"}) | avif %}" type="image/avif">
+        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 750, height: 1400, position: "attention"}) | webp %}" type="image/webp">
+        <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 750, height: 1400, position: "attention"}) | jpeg %}" type="image/jpeg">
         <!--Tablet Image -->
-        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/hero.jpg" | resize({width: 1024, height: 683}) | avif %}" type="image/avif">
-        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/hero.jpg" | resize({width: 1024, height: 683}) | webp %}" type="image/webp">
-        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/hero.jpg" | resize({width: 1024, height: 683}) | jpeg %}" type="image/jpeg">
+        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 1024, height: 683}) | avif %}" type="image/avif">
+        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 1024, height: 683}) | webp %}" type="image/webp">
+        <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 1024, height: 683}) | jpeg %}" type="image/jpeg">
         <!--Desktop Image -->
-        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/hero.jpg" | resize({width: 2250, height: 1500}) | avif %}" type="image/avif">
-        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/hero.jpg" | resize({width: 2250, height: 1500}) | webp %}" type="image/webp">
-        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/hero.jpg" | resize({width: 2250, height: 1500}) | jpeg %}" type="image/jpeg">
-        <img src="{% getUrl "/assets/images/hero.jpg" | resize({width: 2250, height: 1500}) | jpeg %}" alt="massage" width="2250" height="1500" loading="lazy" decoding="async" aria-hidden="true">
+        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 2250, height: 1500}) | avif %}" type="image/avif">
+        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 2250, height: 1500}) | webp %}" type="image/webp">
+        <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 2250, height: 1500}) | jpeg %}" type="image/jpeg">
+        <img src="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 2250, height: 1500}) | jpeg %}" alt="massage" width="2250" height="1500" loading="lazy" decoding="async" aria-hidden="true">
         </picture>
     <!--SVG Curve-->
     <svg class="cs-curve" width="1920" height="136" viewBox="0 0 1920 136" fill="none" xmlns="http://www.w3.org/2000/svg">
