--- a/src/_includes/components/hero-1469.html
+++ b/src/_includes/components/hero-1469.html
@@ -22,7 +22,7 @@
         <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 2250, height: 1500}) | avif %}" type="image/avif">
         <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 2250, height: 1500}) | webp %}" type="image/webp">
         <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 2250, height: 1500}) | jpeg %}" type="image/jpeg">
-        <img src="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 2250, height: 1500}) | jpeg %}" alt="massage" width="2250" height="1500" loading="lazy" decoding="async" aria-hidden="true">
+        <img src="{% getUrl "/assets/images/hero-1.jpg" | resize({width: 2250, height: 1500}) | jpeg %}" alt="massage" width="2250" height="1500" >
         </picture>
     <!--SVG Curve-->
     <svg class="cs-curve" width="1920" height="136" viewBox="0 0 1920 136" fill="none" xmlns="http://www.w3.org/2000/svg">
