--- a/src/_includes/components/footer-710.html
+++ b/src/_includes/components/footer-710.html
@@ -84,5 +84,5 @@
         </div>
     </div>
     <!--SVG Waves-->
-    <img class="cs-graphic" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Ffooter-waves.svg" alt="waves" aria-hidden="true" loading="lazy" decoding="async" width="1920" height="616">
+    <img class="cs-graphic" src="/assets/svgs/footer-waves.svg" alt="waves" aria-hidden="true" loading="lazy" decoding="async" width="1920" height="616">
 </footer>
