--- a/src/_includes/components/cta-262.html
+++ b/src/_includes/components/cta-262.html
@@ -15,7 +15,7 @@
                 9AM - 7PM
             </p>
             <p class="cs-p">
-                Appointments Preferred, Walk-Ins Welcome.<br>
+                Please Schedule Ahead – We Want to Be Ready for You!<br>
             </p>
         </div>
         <picture class="cs-background">
